# treeutils

./: BipartiteMWIS.h  CMakeLists.txt  README.md  define.h  main.cpp  maxflow.h  newicklex.cpp  newicklex.h  node.h  treeutil.h  util.h
testdata/: alignment1.phylip.nhx  basic.txt  tree.txt
